# motek_api

./: README.md
.github/workflows/: deploy.yml
motek_api/: .gitignore  Cargo.toml
motek_api/.sqlx/: query-82d4f42e6b7ce135bda6f72d19fd7b6044be20b3d284dd22f55b8c6634ffaede.json  query-ce538af5bd021460bb46dbaca7079f2d6483867b7e21f8dd0b30a08b30a95f62.json
motek_api/logs/: app.log.2025-05-02
motek_api/src/: main.rs  server.rs  state.rs
motek_api/src/database/: token.rs
motek_api/src/models/: attachment.rs  mod.rs  note.rs  note_settings.rs  note_version.rs  notebook.rs  refresh_token.rs  reminder.rs  shared_note.rs  user.rs  user_settings.rs
motek_api/src/routes/: api.rs  attachments.rs  auth.rs  mod.rs  note_settings.rs  notebooks.rs  notes.rs  public.rs  reminders.rs  shared_notes.rs  user_settings.rs
motek_api/src/utils/: auth.rs  config_loader.rs  crypto.rs  extractors.rs  ip_limiter.rs  jwt.rs  mod.rs  validators.rs
motek_app/: README.md  pubspec.yaml
motek_app/android/app/: build.gradle.kts
motek_app/integration_test/: simple_test.dart
motek_app/ios/Runner/: Info.plist
motek_app/ios/Runner.xcodeproj/: project.pbxproj
motek_app/lib/: main.dart
motek_app/linux/: CMakeLists.txt
motek_app/linux/flutter/: generated_plugins.cmake
motek_app/linux/runner/: my_application.cc
motek_app/macos/Runner.xcodeproj/: project.pbxproj
motek_app/rust/: .gitignore  Cargo.toml
motek_app/rust/src/: frb_generated.rs  lib.rs  main.rs
motek_app/rust/src/config/: config_loader.rs
motek_app/rust/src/database/: db.rs
motek_app/rust/src/model/: user.rs
motek_app/rust/src/utils/: crypto.rs
motek_app/rust_builder/: pubspec.yaml
motek_app/rust_builder/android/: build.gradle  settings.gradle
motek_app/rust_builder/ios/: rust_lib_motek.podspec
motek_app/rust_builder/linux/: CMakeLists.txt
motek_app/rust_builder/macos/: rust_lib_motek.podspec
motek_app/rust_builder/windows/: CMakeLists.txt
motek_app/web/: index.html  manifest.json
motek_app/windows/: CMakeLists.txt
motek_app/windows/flutter/: generated_plugins.cmake
motek_app/windows/runner/: Runner.rc  main.cpp
motek_ui/: README.md  l10n.yaml  package-lock.json  package.json  pubspec.yaml
motek_ui/android/app/: build.gradle.kts
motek_ui/integration_test/: simple_test.dart
motek_ui/ios/Runner/: Info.plist
motek_ui/ios/Runner.xcodeproj/: project.pbxproj
motek_ui/lib/: app.dart  main.dart
motek_ui/lib/l10n/: app_localizations.dart  app_localizations_en.dart  app_localizations_es.dart  app_localizations_pl.dart  en.arb  es.arb  pl.arb
motek_ui/lib/models/: content_type.dart
motek_ui/lib/screens/: log_settings_screen.dart  logs_screen.dart  main_layout.dart  note_editor_screen.dart  note_screen.dart  notebook_notes_screen.dart  notebooks_screen.dart  tags_screen.dart
motek_ui/lib/services/: auth_service.dart  note_sevice.dart  settings_service.dart
motek_ui/lib/utils/: log_entry.dart  logger.dart  logs_manager.dart  theme_constants.dart  theme_manager.dart
motek_ui/linux/: CMakeLists.txt
motek_ui/linux/flutter/: generated_plugins.cmake
motek_ui/linux/runner/: my_application.cc
motek_ui/macos/Runner.xcodeproj/: project.pbxproj
motek_ui/rust/: Cargo.toml
motek_ui/rust/src/: frb_generated.rs  lib.rs
motek_ui/rust/src/api/: endpoint.rs
motek_ui/rust/src/api_handlers/: attachments.rs  auth.rs  mod.rs  note_settings.rs  notebooks.rs  notes.rs  reminders.rs  shared_notes.rs  user_settings.rs
motek_ui/rust/src/models/: auth_response.rs  mod.rs
motek_ui/rust/src/utils/: helpers.rs  logging.rs  mod.rs  token.rs  token_storage.rs
motek_ui/rust_builder/: pubspec.yaml
motek_ui/scripts/: README.md  build.js  clean.js  dev.js  generate.js  run.js  setup.js  utils.js
motek_ui/web/: index.html  manifest.json
motek_ui/windows/: CMakeLists.txt
(+49 files in other folders)
