[package]
name = "motek_api"
version = "0.1.0"
edition = "2024"

[dependencies]
argon2 = { version = "0.5.3", default-features = false, features = ["std", "password-hash"] }
rand = "0.9.1"
toml = "0.8.22"
axum = "0.8.4"
tokio = { version = "1.37", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hyper = { version = "1.6.0", features = ["full"] }
once_cell = "1.21.3"
jsonwebtoken = "9.3.1"
bcrypt = "0.17.0"
sqlx = { version = "0.8.5", features = ["runtime-tokio", "postgres", "uuid", "macros", "chrono"] }
uuid = { version = "1.16.0", features = ["serde", "v4"] }
chrono = { version = "0.4.41", features = ["serde"] }
