[package]
name = "motek-service-api"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "motek-service-api"
path = "src/main.rs"

[dependencies]
# --- Web framework and HTTP ---
axum = "0.8.4"
axum-extra = "0.10.1"
axum-server = "0.7.2"
hyper = { version = "1.6.0", features = ["full"] }
tower = { version = "0.5.2" }
tower-http = { version = "0.6.2", features = ["auth", "trace", "cors"] }

# --- Async runtime and utilities ---
tokio = { version = "1.37", features = ["full"] }
async-trait = "0.1.88"
once_cell = "1.21.3"

# --- Serialization / Deserialization ---
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8.22"

# --- Authentication and security ---
argon2 = { version = "0.5.3", default-features = false, features = ["std", "password-hash"] }
bcrypt = "0.17.0"
jsonwebtoken = "9.3.1"

# --- Database ---
sqlx = { version = "0.8.5", features = ["runtime-tokio", "postgres", "uuid", "macros", "chrono"] }
uuid = { version = "1.16.0", features = ["serde", "v4"] }
chrono = { version = "0.4.41", features = ["serde"] }

# --- Random and utilities ---
rand = "0.9.1"
anyhow = "1.0.98"

# --- Logging and tracing ---
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
tracing-appender = "0.2.3"
