[package]
name = "rust_lib_motek"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.9.0"
sqlx = { version = "0.8.5", features = ["postgres", "runtime-tokio-native-tls"] }
tokio = { version = "1.44.2", features = ["full"] }
dotenv = "0.15.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0"
toml = "0.8.21"
argon2 = "0.5"
password-hash = "0.5"
rand = "0.9.1"
rand_core = "0.6.4"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
